# rust_pong

./: .gitignore  Cargo.toml
desktop/: Cargo.toml
desktop/src/: controller.rs  debug.rs  display.rs  main.rs
microcontroller/: Cargo.toml  gdb.bat  gdb.sh
microcontroller/src/: constants.rs  controller.rs  debug.rs  display.rs  main.rs  math.rs  player.rs  renderer.rs
pong_core/: .gitignore  Cargo.toml
pong_core/src/: constants.rs  controller.rs  debug.rs  display.rs  framebuffer.rs  lib.rs  math.rs  pong.rs  renderer.rs
src/: ball.rs  constants.rs  main.rs  paddle.rs  pong.rs
