[package]
name = "rust_pong"
version = "0.1.0"
authors = ["Daniel Ferizovic <dani93.f@gmail.com>"]

[dependencies]
cortex-m = "0.1.4 "
r0 = "0.1.0"
pong_core = { path = "../pong_core" }

[dependencies.stm32f7_discovery]
git = "https://github.com/embed-rs/stm32f7-discovery.git"
branch = "smoltcp"

[profile]

[profile.release]
lto = true